# rust-tui-project-template

./: Cargo.toml  README.md  default-config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs  terminal.rs
src/handlers/: config.rs  event.rs
src/ui/: mod.rs
