[package]
name = "rust-tui-project-template"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
description = "A template for Rust TUI projects."
documentation = "https://github.com/Xithrius/rust-tui-project-template"
homepage = "https://github.com/Xithrius/rust-tui-project-template"
repository = "https://github.com/Xithrius/rust-tui-project-template"
license = "MIT OR Apache-2.0"
keywords = ["tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = { version = "0.19.0", default-features = false, features = [ "crossterm" ] }
tokio = { version = "1.21.0", features = [ "full" ] }
serde = { version = "1.0.144", features = [ "derive" ] }
unicode-width = "0.1.9"
unicode-segmentation = "1.9.0"
chrono = "0.4.22"
toml = "0.5.9"
color-eyre = "0.6.2"
rustyline = "10.0.0"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "rust-tui-project-template"

[profile.release]
lto = "thin"
